Fixed pixel width for excerpts, so that there is not a big gap between the left of the excerpts and the right of the sidebar.

--- a/scss/excerpts-view.scss
+++ b/scss/excerpts-view.scss
@@ -138,7 +138,7 @@ body.body.excerpts-view .main {
     }
 
     .post-excerpt {
-        width: 40em;
+        width: 720px;
         padding: 2em 0px;
         border-bottom: 1px dotted $leaf;
         overflow: auto;
